--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "nbsdev",
   "license": "ISC",
   "dependencies": {
+    "d3": "^7.3.0",
+    "topojson": "^3.0.2",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
