--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "eslint": "^8.7.0",
     "fibers": "^5.0.0",
+    "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
